✅ Tmux files updated

--- a/enviroment/tmux/.tmux.conf
+++ b/enviroment/tmux/.tmux.conf
@@ -1,12 +1,10 @@
-# Tmux configuration
-# ------------------
+# -------------------------------
+# My Personal Tmux Configuration
+# ------------------------------
 
-# This is for the mouse
+# Mouse configuration
 set -g mouse on
 set -g mode-keys vi
-
-# Using tmux resurrect plugin
-# run-shell ~/tmux-resurrect/resurrect.tmux
 
 # For that the colors see good and working with vim
 set -g default-terminal "screen-256color" 
@@ -17,3 +15,18 @@ set -g default-terminal "tmux-256color"
 # Colors to use
 set -g status-bg "blue"
 set -g status-fg "black"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+set -g @open-S 'https://www.google.com/search?q='
+
+set -g @yank_selection 'clipboard'
+set -g @yank_selection_mouse 'clipboard'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
